处理 LaTeX 数学公式。

--- a/themes/hugoplate/layouts/partials/essentials/head.html
+++ b/themes/hugoplate/layouts/partials/essentials/head.html
@@ -59,3 +59,7 @@
 
 <!-- Mermaid -->
 {{ partial "mermaid/assets/js" . }}
+
+{{ if .Param "math" }}
+    {{ partialCached "math.html" . }}
+{{ end}}
